objects/DataType__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for checkbox</description>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>This field is for Date</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>This field is for Email</description>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Layout_Text__c</fullName>
        <label>Layout Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>This field is for Location</description>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Mobile_number__c</fullName>
        <description>This is for actual phone number</description>
        <label>Mobile number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Multi_pick__c</fullName>
        <label>Multi pick</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <description>This is for percentage</description>
        <label>Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <description>This is for number</description>
        <label>Phone number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sr_no__c</fullName>
        <description>This is Auto number</description>
        <displayFormat>P-{0000}</displayFormat>
        <label>Sr. no</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Text_Area__c</fullName>
        <description>This is for text area</description>
        <label>Text Area</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <description>This field is for check text</description>
        <label>Text</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_are_long__c</fullName>
        <description>This is for long area</description>
        <label>Text are long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_are_rich__c</fullName>
        <description>text area rich</description>
        <label>Text are rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Text_encrypted__c</fullName>
        <description>This is for encrypted text</description>
        <label>Text encrypted</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>This field is for date and time</description>
        <label>Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Universal_text__c</fullName>
        <label>Universal text</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Universal_text_del__c</fullName>
        <description>This field is for text datatype and delete undelete operation</description>
        <label>Universal text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>current_time__c</fullName>
        <description>This field for time</description>
        <label>current time</label>
        <required>true</required>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <description>This field for URL or link or website</description>
        <label>link</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>DataType</label>
    <nameField>
        <label>DataType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>